# Course_2_Barnovskiy

./: .coverage  README.md  main.py  pyproject.toml
src/: api_abstract.py  file_api.py  file_json.py  hh_ru_api.py  service_user.py  service_vacancies.py  utils.py
tests/: test_file_json.py  test_hh_ru_api.py  test_servise_vacancies.py  test_utils.py
